# tyhtml

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  README.zh.md  index.d.ts  package.json
.github/workflows/: publish.yml
bench/: run.ts
docs/: review-findings.md
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
scripts/: patch-npm-dirs.mjs
src/: lib.rs
tests/: _setup.ts  error.test.ts  success.test.ts  test.ts
tests/fixtures/: error.typ  hello.typ
