[package]
name = "tyhtml"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.103"
napi = { version = "3.9.4", features = ["async"] }
napi-derive = "3.5.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
typst = "0.15.0"
typst-html = "0.15.0"
typst-kit = { version = "0.15.0", features = ["scan-fonts", "datetime"] }
typst-utils = "0.15.0"

[build-dependencies]
napi-build = "2.3.2"

[profile.release]
opt-level = "z"      # optimize for size over speed
lto = "fat"          # full link-time optimization across crates
codegen-units = 1    # single codegen unit → better optimization
panic = "abort"      # drop unwinding tables
strip = true         # strip symbols (debug info + names)
